--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "feedparser": "^2.2.2",
-    "pg": "^7.3.0"
+    "pg": "^7.3.0",
+    "request": "^2.83.0"
   }
 }
